src/test/resources/regression/verification/overflow/invalid/Overflow6.scala
import leon.lang._

object Overflow6 {

  def foo6(x: Int, y: Int): Int = {
    x - y
  }

}
